--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -74,13 +75,18 @@ Mes del hecho: agosto 2025"></textarea>
     <h2>📄 Tipo de disposición</h2>
 
     <label class="radio-card">
-      <input type="radio" name="tipo" value="apertura" checked />
+      <input type="radio" name="tipo" value="apertura_fraude" checked />
       Disposición de Apertura – Fraude Informático
     </label>
 
     <label class="radio-card">
+      <input type="radio" name="tipo" value="apertura_suplantacion" checked />
+      Disposición de Apertura – Suplantación de Identidad
+    </label>
+
+    <label class="radio-card">
       <input type="radio" name="tipo" value="archivo_monto" />
-      Disposición de Archivo Liminar – Monto Mínimo
+      Disposición de Archivo Liminar – Monto Mínimo - Fraude Informático
     </label>
   </section>
 
