--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@ Mes del hecho: agosto 2025"></textarea>
   <p class="hint">
     Nombre del fiscal responsable que figurará en el encabezado del documento.
   </p>
+     <label class="remember-option">
+        <input type="checkbox" id="rememberFiscal">
+         Recordar fiscal responsable
+    </label>
 </section>
 
   <!-- BLOQUE 4: TIPO DE DISPOSICIÓN -->
